// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fs - errored state for reportNeedlessDisables 1`] = `
{
  "cwd": "",
  "errored": true,
  "output": [
    {
      "deprecations": [],
      "errored": false,
      "invalidOptionWarnings": [],
      "parseErrors": [],
      "warnings": [
        {
          "column": 1,
          "endColumn": 38,
          "endLine": 1,
          "line": 1,
          "rule": "--report-needless-disables",
          "severity": "error",
          "text": "Needless disable for "block-no-empty"",
        },
      ],
    },
  ],
  "reportedDisables": [],
  "results": [
    {
      "deprecations": [],
      "errored": false,
      "ignored": undefined,
      "invalidOptionWarnings": [],
      "parseErrors": [],
      "warnings": [
        {
          "column": 1,
          "endColumn": 38,
          "endLine": 1,
          "line": 1,
          "rule": "--report-needless-disables",
          "severity": "error",
          "text": "Needless disable for "block-no-empty"",
        },
      ],
    },
  ],
  "ruleMetadata": {
    "block-no-empty": {
      "url": "https://stylelint.io/user-guide/rules/block-no-empty",
    },
  },
}
`;

exports[`fs - no errored state 1`] = `
{
  "cwd": "",
  "errored": false,
  "output": [
    {
      "deprecations": [],
      "errored": false,
      "invalidOptionWarnings": [],
      "parseErrors": [],
      "warnings": [],
    },
  ],
  "reportedDisables": [],
  "results": [
    {
      "deprecations": [],
      "errored": false,
      "ignored": undefined,
      "invalidOptionWarnings": [],
      "parseErrors": [],
      "warnings": [],
    },
  ],
  "ruleMetadata": {
    "block-no-empty": {
      "url": "https://stylelint.io/user-guide/rules/block-no-empty",
    },
  },
}
`;
